fix issue with header background image overlap

--- a/css/style.css
+++ b/css/style.css
@@ -508,6 +508,14 @@ body {
   padding: 5rem 0 14rem 0;
 }
 
+.header-about {
+  z-index: -1;
+  position: relative;
+  background-repeat: no-repeat;
+  background-position: 75vw 45vh;
+  background-image: url(../assets/bg-pattern-about-1-mobile-nav-1.svg);
+}
+
 .hamburger-menu {
   background-color: transparent;
   background-image: url(../assets/icon-hamburger.svg);
@@ -859,6 +867,10 @@ div.testimonials__box:nth-child(3) {
   div.testimonials__box:nth-child(3) {
     margin: 0;
   }
+}
+
+.staff {
+  background-color: #012f34;
 }
 
 .contact {
